# klend-sdk

./: .env.example  .eslintignore  .eslintrc.js  .gitignore  .mocharc.json  .npmignore  .prettierignore  README.md  README_KAMINO_MANAGER.md  jest.config.js  package.json  reserve_config_example.json  tsconfig.json
configs/: reserve_config_example.json
examples/: README.md  example_borrow.ts  example_burn_ctokens_redeem_tokens.ts  example_change_market_admin.ts  example_deposit_in_obligation.ts  example_deposit_mint_ctokens.ts  example_extra_farm_reward_apy.ts  example_get_obligations_based_on_reserve_filter.ts  example_harvest_reward.ts  example_loan_info.ts  example_loan_ltv.ts  example_loan_value.ts  example_market_reserves.ts  example_multiply_adjust_transaction.ts  example_multiply_adjust_transaction_kswap.ts  example_multiply_deposit_transaction.ts  example_multiply_deposit_transaction_kswap.ts  example_multiply_loan_info_and_pnl.ts  example_multiply_manage_position_transaction.ts  example_multiply_withdraw_transaction.ts  example_multiply_withdraw_transaction_kswap.ts  example_obligation_order.ts  example_read_supplied_and_borrowed_token_and_pending_rewards_for_user.ts  example_repay_with_coll_calcs.ts  example_reserve_apy.ts  example_reserve_apy_history.ts  example_reserve_caps.ts  example_reserve_reward_apy.ts  example_reserve_supply_and_borrow.ts  (+7 more)
examples/klend-examples/rust-examples/: Cargo.toml  Readme.md
examples/klend-examples/rust-examples/examples/: deposit_and_redeem.rs
examples/klend-examples/rust-examples/src/: instructions.rs  lib.rs  states.rs
(+846 files in other folders)
